// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cWaYDO"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 cqdWph"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 cVrrwF"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 dtRjHn"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hjZHvI"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 gLNnXf"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 dDmoTh"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cWaYDO"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 cqdWph"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 dtRjHn"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cWaYDO"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 cqdWph"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 dtRjHn"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cWaYDO"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 cqdWph"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 dtRjHn"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 cWaYDO"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <input
        className="Input-qkdgvx-0 cqdWph"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 giDsHQ"
      >
        <input
          className="Input-qkdgvx-0 bfqfwa"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kIzXQh"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 begHmG"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 coSnaj"
    >
      <div
        className="Inner-sc-1soq84i-0 enHEsf"
      >
        <input
          className="Input-qkdgvx-0 dtRjHn"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 dBsIAK"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
